Add new project food

--- a/index.html
+++ b/index.html
@@ -1,19 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV của Tôi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Chào mừng bạn đến với website của tôi</h1>
-        <p>
-            Tên: Trần Tấn Vũ
-            Tuổi: 20
-            Khoa: Công nghệ thông tin
-        </p>
+        <header>
+            <div class="profile-img">
+                <img src="image.png" alt="Ảnh đại diện">
+            </div>
+            <h1>Trần Tấn Vũ</h1>
+            <p>Development</p>
+        </header>
+        <section class="contact-info">
+            <h2>Thông tin liên hệ</h2>
+            <ul>
+                <li>Email: hacker01676678299@gmail.com</li>
+                <li>Điện thoại: 0889154209</li>
+                <li>Địa chỉ: 127/2/4 P13, Bình Lợi Bình Thạnh</li>
+                <li>LinkedIn: linkedin.com/in/yourprofile</li>
+                <li>GitHub: github.com/yourprofile</li>
+            </ul>
+        </section>
+        <section class="summary">
+            <h2>Tóm tắt</h2>
+            <p>
+                ...
+            </p>
+        </section>
+        <section class="experience">
+            <h2>Kinh nghiệm làm việc</h2>
+            <div class="job">
+                <h3>Chức vụ</h3>
+                <p class="company">Công ty FPT</p>
+                <p class="duration">Thời gian làm việc 2 năm</p>
+                <ul>
+                    <li>Đạt được danh hiệu nhân viên giỏi</li>
+                    <li>...</li>
+                </ul>
+            </div>
+        </section>
+        <section class="education">
+            <h2>Học vấn</h2>
+            <div class="degree">
+                <h3>Bằng cấp</h3>
+                <p class="school">Trường/Đại học: Đại học Văn Lang</p>
+                <p class="duration">Thời gian học: 4 năm</p>
+            </div>
+        </section>
+        <section class="skills">
+            <h2>Kỹ năng</h2>
+            <ul>
+                <li>Kỹ năng TeamWork</li>
+                <li>Kỹ năng tin học văn phòng</li>
+                <li>Kỹ năng tự học</li>
+            </ul>
+        </section>
     </div>
 </body>
 </html>
