Add new project food

--- a/index.html
+++ b/index.html
@@ -1,64 +1,169 @@
+
 <!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV của Tôi</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <header>
-            <div class="profile-img">
-                <img src="image.png" alt="Ảnh đại diện">
-            </div>
-            <h1>Trần Tấn Vũ</h1>
-            <p>Development</p>
-        </header>
-        <section class="contact-info">
-            <h2>Thông tin liên hệ</h2>
-            <ul>
-                <li>Email: hacker01676678299@gmail.com</li>
-                <li>Điện thoại: 0889154209</li>
-                <li>Địa chỉ: 127/2/4 P13, Bình Lợi Bình Thạnh</li>
-                <li>LinkedIn: linkedin.com/in/yourprofile</li>
-                <li>GitHub: github.com/yourprofile</li>
-            </ul>
-        </section>
-        <section class="summary">
-            <h2>Tóm tắt</h2>
-            <p>
-                ...
-            </p>
-        </section>
-        <section class="experience">
-            <h2>Kinh nghiệm làm việc</h2>
-            <div class="job">
-                <h3>Chức vụ</h3>
-                <p class="company">Công ty FPT</p>
-                <p class="duration">Thời gian làm việc 2 năm</p>
-                <ul>
-                    <li>Đạt được danh hiệu nhân viên giỏi</li>
-                    <li>...</li>
-                </ul>
-            </div>
-        </section>
-        <section class="education">
-            <h2>Học vấn</h2>
-            <div class="degree">
-                <h3>Bằng cấp</h3>
-                <p class="school">Trường/Đại học: Đại học Văn Lang</p>
-                <p class="duration">Thời gian học: 4 năm</p>
-            </div>
-        </section>
-        <section class="skills">
-            <h2>Kỹ năng</h2>
-            <ul>
-                <li>Kỹ năng TeamWork</li>
-                <li>Kỹ năng tin học văn phòng</li>
-                <li>Kỹ năng tự học</li>
-            </ul>
-        </section>
-    </div>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./style.css" />
+		<title>My Profile</title>
+	</head>
+	<body>
+		<header>
+			<div class="img-container">
+				<img src="image.png" alt="" class="img avatar" />
+			</div>
+			<div class="title-container">
+				<h1>Trần Tấn Vũ</h1>
+				<h2>Mobile Development</h2>
+			</div>
+		</header>
+
+		<div class="container">
+			<div class="sider">
+				<div class="sider-content">
+					<h1 class="tag-fill">Contact</h1>
+					<div class="tag-content">
+						<ul>
+							<li>Items</li>
+							<li>Items</li>
+							<li>Items</li>
+							<li>Items</li>
+							<li>Items</li>
+						</ul>
+					</div>
+				</div>
+				<div class="sider-content">
+					<h1 class="tag-fill">Skill</h1>
+					<div class="tag-content progress-container">
+						<p class="progress-title">English</p>
+						<div class="progress-wrap">
+							<div class="progress" style="width: 80%"></div>
+						</div>
+					</div>
+					<div class="tag-content progress-container">
+						<p class="progress-title">English</p>
+						<div class="progress-wrap">
+							<div class="progress" style="width: 50%"></div>
+						</div>
+					</div>
+					<div class="tag-content progress-container">
+						<p class="progress-title">English</p>
+						<div class="progress-wrap">
+							<div class="progress" style="width: 80%"></div>
+						</div>
+					</div>
+					<div class="tag-content progress-container">
+						<p class="progress-title">English</p>
+						<div class="progress-wrap">
+							<div class="progress" style="width: 30%"></div>
+						</div>
+					</div>
+				</div>
+				<div class="sider-content">
+					<h1 class="tag-fill">Chứng chỉ</h1>
+					<div class="tag-content">
+						<p>
+							Contrary to popular belief, Lorem Ipsum is not simply random text.
+						</p>
+						<ul class="text-content">
+							<li>Contrary to popular belief</li>
+							<li>Contrary to popular belief</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="content">
+				<div>
+					<h1 class="tag">Giới thiệu</h1>
+					<p class="text-content">
+						Contrary to popular belief, Lorem Ipsum is not simply random text.
+						It has roots in a piece of classical Latin literature from 45 BC,
+						making it over 2000 years old. Richard McClintock, a Latin professor
+						at Hampden-Sydney College in Virginia, looked up one of the more
+						obscure Latin words, consectetur, from a Lorem Ipsum passage, and
+						going through the cites of the word in classical literature,
+						discovered the undoubtable source.
+					</p>
+				</div>
+				<div class="description-content">
+					<h1 class="tag">Kinh nghiệm làm việc</h1>
+					<ul>
+						<li>
+							<div class="tabbar-title">
+								<p class="text-content">Viết CV</p>
+								<p class="text-date">03/2017 - 03/2018</p>
+							</div>
+							<h3>Quản lý sản phẩm</h3>
+							<p class="text-content">
+								Contrary to popular belief, Lorem Ipsum is not simply random
+								text. It has roots in a piece of classical Latin literature from
+								45 BC, making it over 2000 years old.
+							</p>
+							<ul>
+								<li>
+									Contrary to popular belief, Lorem Ipsum is not simply random
+									text. It has roots in a piece of classical Latin literature
+									from 45 BC, making it over 2000 years old.
+								</li>
+								<li>
+									Contrary to popular belief, Lorem Ipsum is not simply random
+									text. It has roots in a piece of classical Latin literature
+									from 45 BC, making it over 2000 years old.
+								</li>
+								<li>
+									Contrary to popular belief, Lorem Ipsum is not simply random
+									text. It has roots in a piece of classical Latin literature
+									from 45 BC, making it over 2000 years old.
+								</li>
+								<li>
+									Contrary to popular belief, Lorem Ipsum is not simply random
+									text. It has roots in a piece of classical Latin literature
+									from 45 BC, making it over 2000 years old.
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+				<div class="description-content">
+					<h1 class="tag">Kinh nghiệm làm việc</h1>
+					<ul>
+						<li>
+							<div class="tabbar-title">
+								<p class="text-content">Viết CV</p>
+								<p class="text-date">03/2017 - 03/2018</p>
+							</div>
+							<h3>Quản lý sản phẩm</h3>
+							<p class="text-content">
+								Contrary to popular belief, Lorem Ipsum is not simply random
+								text. It has roots in a piece of classical Latin literature from
+								45 BC, making it over 2000 years old.
+							</p>
+							<ul>
+								<li>
+									Contrary to popular belief, Lorem Ipsum is not simply random
+									text. It has roots in a piece of classical Latin literature
+									from 45 BC, making it over 2000 years old.
+								</li>
+								<li>
+									Contrary to popular belief, Lorem Ipsum is not simply random
+									text. It has roots in a piece of classical Latin literature
+									from 45 BC, making it over 2000 years old.
+								</li>
+								<li>
+									Contrary to popular belief, Lorem Ipsum is not simply random
+									text. It has roots in a piece of classical Latin literature
+									from 45 BC, making it over 2000 years old.
+								</li>
+								<li>
+									Contrary to popular belief, Lorem Ipsum is not simply random
+									text. It has roots in a piece of classical Latin literature
+									from 45 BC, making it over 2000 years old.
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
